<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Collector</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="browse">Browse</string>
    <string name="or">- or -</string>
    
    <string name="name">Name</string>
    <string name="picture">Picture</string>
    <string name="my_collections">My Collections</string>
    <string name="create_collection">Create a New Collection</string>
    <string name="add_collection">Add Collection</string>
    <string name="add_item">Add a New Item</string>
    <string name="collection">Collection</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="comments">Comments</string>
    <string name="favorites">Favorites</string>
    <string name="shade">Shade</string>
    
    <string name="menu">Menu</string>
    <string name="my_profile">My Profile</string>
    <string name="browse_collections">Browse Collections</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    
    <string name="profile_info">Profile Info</string>
    <string name="data_storage">Data Storage</string>
    <string name="display_name">Display Name</string>
    <string name="email_address">Email Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="remove_data">Remove Non-User Data</string>

    <string-array name="collection_categories">
        <item>Books</item>
        <item>Cards</item>
        <item>Coins</item>
        <item>Electronics</item>
        <item>Figurines</item>
        <item>Media</item>
        <item>Stamps</item>
        <item>Other</item>
    </string-array>

</resources>