<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/dark_purple" >

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/transparent_purple_selector"
            android:contentDescription="@string/menu"
            android:onClick="menuClicked"
            android:padding="6dp"
            android:src="@drawable/icon_menu" />

        <TextView
            style="@style/header_app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/settings" />
    </RelativeLayout>

    <TextView
        style="@style/settings_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/profile_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/settings_picture"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:contentDescription="@string/picture"
            android:onClick="uploadPicture"
            android:padding="12dp"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/settings_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@id/settings_picture"
            android:hint="@string/display_name"
            android:maxLength="35"
            android:singleLine="true" />

        <EditText
            android:id="@+id/settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_display_name"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@id/settings_picture"
            android:hint="@string/email_address"
            android:maxLength="50"
            android:singleLine="true" />
    </RelativeLayout>

    <Button
        style="@style/big_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_blue"
        android:onClick="saveChanges"
        android:text="@string/save_changes" />

    <TextView
        style="@style/settings_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/data_storage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/white" />

    <Button
        style="@style/big_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_green"
        android:onClick="removeData"
        android:text="@string/remove_data" />

</LinearLayout>