<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >

    <ImageView
        android:id="@+id/shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88111111"
        android:contentDescription="@string/shade"
        android:onClick="shadeClicked" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_white"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="25dp" >

        <ImageView
            android:id="@+id/item_picture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picture"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_book" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textColor="#121212"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="#121212"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>