<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:splitMotionEvents="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/menu_username"
        style="@style/side_menu_text"
        android:background="@color/light_blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDFFFFFF" />

    <TextView
        android:id="@+id/menu_profile"
        style="@style/side_menu_text"
        android:clickable="true"
        android:onClick="menuProfile"
        android:text="@string/my_profile" />

    <View
        android:id="@+id/menu_profile_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDFFFFFF" />

    <TextView
        style="@style/side_menu_text"
        android:clickable="true"
        android:onClick="menuBrowse"
        android:text="@string/browse_collections" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDFFFFFF" />

    <TextView
        android:id="@+id/menu_settings"
        style="@style/side_menu_text"
        android:clickable="true"
        android:onClick="menuSettings"
        android:text="@string/settings" />

    <View
        android:id="@+id/menu_settings_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDFFFFFF" />

    <TextView
        android:id="@+id/menu_logout"
        style="@style/side_menu_text"
        android:background="@drawable/selector_green"
        android:clickable="true"
        android:onClick="menuLogout"
        android:text="@string/logout" />

    <View
        android:id="@+id/menu_logout_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDFFFFFF" />

</LinearLayout>