<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="@color/light_grey" >

        <ImageView
            android:id="@+id/collection_picture"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:contentDescription="@string/picture"
            android:padding="12dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/collection_picture"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/collection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/collection_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/profile_num_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="@android:color/black" >
            </TextView>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/comments"
                android:padding="2dp"
                android:src="@drawable/comment_icon" />

            <TextView
                android:id="@+id/profile_num_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@android:color/black" >
            </TextView>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/favorites"
                android:src="@drawable/favorites_icon" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_purple" >

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="auto_fit" >
        </GridView>
    </ScrollView>

</LinearLayout>