<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_grey_border"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/edit_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_border"
            android:contentDescription="@string/picture"
            android:onClick="uploadPicture"
            android:padding="4dp"
            android:src="@drawable/ic_launcher_no_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/title"
                android:inputType="textCapWords"
                android:maxLength="40"
                android:padding="10dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#44000000" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/description"
                android:maxLength="150"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/big_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_blue"
        android:onClick="addItem"
        android:text="@string/add_item" />

</LinearLayout>