<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#747DC8"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="#D8D8D8" >

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:padding="12dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/picture" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_toRightOf="@id/profile_picture"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/profile_num_collections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" >
            </TextView>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/my_collections"
                android:src="@drawable/my_collections" />
        </LinearLayout>
    </RelativeLayout>
    
    <Button
        style="@style/big_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/rounded_green"
        android:text="Create Collection"/>

</LinearLayout>